SSCS-8933: IIDB - Airlookup, DWP addresses & Robot Configuration